add env file in dockerfile

--- a/Dockerfile.mock_app
+++ b/Dockerfile.mock_app
@@ -5,5 +5,7 @@ WORKDIR /
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+COPY .env .
+
 COPY mock_dataset.py .
 CMD ["python", "mock_dataset.py"]
